onging : 배너관리 중간저장

--- a/module-admin/src/main/resources/templates/banner/bannerList.html
+++ b/module-admin/src/main/resources/templates/banner/bannerList.html
@@ -26,31 +26,6 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 mb-3">
                                     <div class="mb-0 form-group row">
-                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
-                                        <div class="input-group input-group-dropdown mb-0">
-                                            <input type="text" class="form-control form-control-round" id="searchKeyword" name="searchKeyword">
-                                            <select id="searchType" name="searchType" class="form-select form-control form-control-round custom-select">
-                                                <option value="">- 선택 -</option>
-                                                <option value="email">아이디</option>
-                                                <option value="nickName">닉네임</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-md-6 mb-3">
-                                    <div class="mb-0 form-group row">
-                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>유형</strong>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <select id="searchCategory" name="searchCategory" class="form-select form-control form-control-round custom-select">
-                                                <option value="">- 전체 -</option>
-                                                <option th:each="item : ${searchSendCategory}" th:value="${item.key}" th:text="${item.value}">value</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-md-6 mb-3">
-                                    <div class="mb-0 form-group row">
                                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="searchTitle"><strong>제목</strong></label>
                                         <div class="col-12">
                                             <input type="text" class="form-control form-control-round" aria-label="Text input with dropdown button" id="searchTitle" name="searchTitle"/>
@@ -59,11 +34,14 @@
                                 </div>
                                 <div class="col-lg-3 col-md-6 mb-3">
                                     <div class="mb-0 form-group row">
-                                        <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="searchPeriod"><strong>등록일</strong></label>
+                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>사용여부</strong>
+                                        </div>
                                         <div class="col-sm-12">
-                                            <input type="text"  class="form-control form-control-round" aria-label="Text input with dropdown button" value="" name="searchPeriod" id="searchPeriod" autocomplete="off">
-                                            <input type="hidden" id="searchBgngDt"name="searchBgngDt" >
-                                            <input type="hidden" id="searchEndDt"name="searchEndDt" >
+                                            <select id="searchCategory" name="searchCategory" class="form-select form-control form-control-round custom-select">
+                                                <option value="">- 전체 -</option>
+                                                <option value="Y">사용</option>
+                                                <option value="N">미사용</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
@@ -83,7 +61,7 @@
 
             <!-- 그리드 부분(표시를 위해 임의로 넣어둠) -->
             <div class="row mb-3">
-                <div class="col-12 col-xl-4">
+                <div class="col-12 col-xl-6">
                     <div class="row">
                         <h5 class="col-12 col-md-6 mb-3">
                             <strong>배너 위치</strong>
@@ -105,7 +83,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-xl-8">
+                <div class="col-12 col-xl-6">
                     <div class="row align-items-center">
                         <h5 class="col mb-3">
                             <strong>배너 목록</strong>
@@ -117,8 +95,8 @@
                     <div class="card">
                         <div class="card-block-small">
                             <div class="banner-wrap">
-                                <div class="banner-area">
-                                    <!--<div class="banner-list">-->
+                                <div class="banner-select">
+                                    <div class="banner-list column">
                                         <div class="banner">
                                             <div class="row align-items-center">
                                                 <div class="col stit">
@@ -129,7 +107,9 @@
                                                 <img class="img-fluid col-auto" src="/files/assets/images/pngegg.png">
                                             </div>
 
-                                            <img class="img-fluid col-12" src="/files/assets/images/logo2.png" alt="banner image">
+                                            <div class="text-center">
+                                                <img src="/files/assets/images/logo2.png" alt="banner image">
+                                            </div>
 
                                             <div class="row align-items-center mt-3">
                                                 <div class="col">
@@ -139,7 +119,6 @@
                                                 <div class="col-auto">
                                                     <div class="">
                                                         <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled" checked/>
-                                                        <label for="isEnabled" class="v-middle">사용여부</label>
                                                     </div>
                                                 </div>
                                             </div>
@@ -154,7 +133,9 @@
                                                 <img class="img-fluid col-auto" src="/files/assets/images/pngegg.png">
                                             </div>
 
-                                            <img class="img-fluid col-12" src="/files/assets/images/fafvicon2.png" alt="banner image">
+                                            <div class="text-center">
+                                                <img src="/files/assets/images/fafvicon2.png" alt="banner image">
+                                            </div>
 
                                             <div class="row align-items-center mt-3">
                                                 <div class="col">
@@ -164,7 +145,6 @@
                                                 <div class="col-auto mb-3">
                                                     <div class="">
                                                         <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled" checked/>
-                                                        <label for="isEnabled" class="v-middle">사용여부</label>
                                                     </div>
                                                 </div>
                                             </div>
@@ -176,10 +156,12 @@
                                                 <strong>환영합니다!</strong>
                                             </span>
                                                 </div>
-                                                <img class="img-fluid h-50 col-auto" src="/files/assets/images/pngegg.png">
+                                                <img class="img-fluid col-auto" src="/files/assets/images/pngegg.png">
                                             </div>
 
-                                            <img class="img-fluid col-12" src="/files/assets/images/logo2.png" alt="banner image">
+                                            <div class="text-center">
+                                                <img src="/files/assets/images/fafvicon4.png" alt="banner image">
+                                            </div>
 
                                             <div class="row align-items-center">
                                                 <div class="col">
@@ -189,12 +171,11 @@
                                                 <div class="col-auto mb-3 mt-3">
                                                     <div class="">
                                                         <input type="checkbox" class="js-single-small" name="isEnabled" id="isEnabled" checked/>
-                                                        <label for="isEnabled" class="v-middle">사용여부</label>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    <!--</div>-->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -213,8 +194,28 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
     <script th:inline="javascript">
-        const listController = {
+        var columns = document.querySelectorAll(".column");
 
+        const listController = {
+            init : function() {
+                this.registEvent();
+            },
+
+            registEvent : function() {
+                // drag&drop event
+                columns.forEach((column) => {
+                    var sortbale = new Sortable(column, {
+                        group: "shared",
+                        animation: 150,
+                        ghostClass: "blue-background-class",
+                        dataIdAttr: 'data-id',
+
+                        onEnd : function(evt) { // 배너를 drop 했을때 실행
+                            console.log(1)
+                        }
+                    });
+                });
+            }
         };
 
         $(function () {
