--- a/module-admin/src/main/resources/templates/member/tab/adopted.html
+++ b/module-admin/src/main/resources/templates/member/tab/adopted.html
@@ -1,10 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="card-header p-t-0 p-b-0">
+    <h3 class="sub-title"><strong>입양기록</strong></h3>
+</div>
+<div class="card-block-small p-t-0">
+    <div class="dt-responsive table-responsive">
+        <div id="order-table_wrapper" class="dataTables_wrapper dt-bootstrap4">
+            <table id="adoptedTable" class="display" style="width:100%">
+                <thead>
+                <tr>
+                    <th>제목</th>
+                    <th>반려동물</th>
+                    <th>품종</th>
+                    <th>성별</th>
+                    <th>분양자</th>
+                    <th>입양완료일시</th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-</body>
-</html>
+<script th:inline="javascript">
+    $(function () {
+        // 제목, 반려동물, 품종, 성별, 분양자, 입양완료일시
+        const adoptedController = {
+            memberId: /*[[${memberId}]]*/null,
+
+            init: function () {
+                let adoptedTable = null;
+
+                if (adoptedTable != null) adoptedTable.destroy();
+
+                adoptedTable = $('#adoptedTable').DataTable({
+                    "columnDefs": [
+                        {className: "dt-center", targets: "_all"}
+                    ],
+                    stripeClasses: [],
+                    pagingType: 'full_numbers',
+                    lengthChange: false,
+                    responsive: true,
+                    searching: false,
+                    info: false,
+                    destroy: true,
+                    ordering: false,
+                    paging: true,
+                    pageLength: 10,
+                    bPaginate: true,
+                    bAutoWidth: true, // 자동 컬럼 폭을 계산하여 반영
+                    serverSide: true,
+                    processing: true, // 값을 가져오는 등의 처리 상황에서 대기가 발생할 때, "processing"인디케이터를 보여준다.
+
+                    ajax: {
+                        async: false,
+                        url: `/admin/members/${adoptedController.memberId}/adopted/list?` + $('#searchForm').serialize(),
+                        method: 'get',
+                        "dataSrc": function (res) {
+                            return res.data;
+                        }
+                    },
+
+                    columns: [
+                        {data: 'title'},
+                        {data: 'animalDivision1'},
+                        {data: 'animalDivision2'},
+                        {data: 'gender'},
+                        {data: 'adoptMemberName'},
+                        {data: 'adopted_at'},
+                    ],
+                    language: {
+                        search: '검색',
+                        emptyTable: '데이터가 없습니다.',
+                        loadingRecords: '로딩중..',
+                    },
+                    drawCallback: function () {
+                        var $api = this.api();
+                        var pages = $api.page.info().pages;
+
+                        if (pages === 0) {
+                            $(".paginate_button").hide();
+                        }
+                    }
+                })
+            }
+        }
+        adoptedController.init();
+    })
+</script>
