--- a/module-admin/src/main/resources/templates/member/view.html
+++ b/module-admin/src/main/resources/templates/member/view.html
@@ -138,6 +138,7 @@
                         // {orderable: false, className: 'select-checkbox', targets: 0, defaultContent: ''},
                         {className: "dt-center", targets: "_all"}
                     ],
+                    stripeClasses: [],
                     pagingType: 'full_numbers',
                     lengthChange: false,
                     responsive: true,
@@ -157,7 +158,6 @@
                         url: `/admin/members?` + $('#searchForm').serialize(),
                         method: 'get',
                         "dataSrc": function (res) {
-                            res.data[0].isFirst = true;
                             return res.data;
                         }
                     },
