--- a/module-admin/src/main/resources/templates/member/tab/adoption.html
+++ b/module-admin/src/main/resources/templates/member/tab/adoption.html
@@ -1,5 +1,5 @@
 <div class="card-header p-t-0 p-b-0">
-    <h3 class="sub-title"><strong>입양기록</strong></h3>
+    <h3 class="sub-title"><strong>분양기록</strong></h3>
 </div>
 <div class="card-block-small p-t-0">
     <div class="dt-responsive table-responsive">
@@ -11,8 +11,8 @@
                     <th>반려동물</th>
                     <th>품종</th>
                     <th>성별</th>
-                    <th>분양자</th>
-                    <th>입양완료일시</th>
+                    <th>입양자</th>
+                    <th>분양완료일시</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -22,18 +22,18 @@
     </div>
 </div>
 
-<script th:inline="javascript">
+<script>
     $(function () {
         // 제목, 반려동물, 품종, 성별, 분양자, 입양완료일시
-        const adoptedController = {
+        const adoptionController = {
             memberId: /*[[${memberId}]]*/null,
 
             init: function () {
-                let adoptedTable = null;
+                let adoptionController = null;
 
-                if (adoptedTable != null) adoptedTable.destroy();
+                if (adoptionController != null) adoptionController.destroy();
 
-                adoptedTable = $('#adoptedTable').DataTable({
+                adoptionController = $('#adoptionController').DataTable({
                     "columnDefs": [
                         {className: "dt-center", targets: "_all"}
                     ],
@@ -54,7 +54,7 @@
 
                     ajax: {
                         async: false,
-                        url: `/admin/members/${adoptedController.memberId}/adopted/list?` + $('#searchForm').serialize(),
+                        url: `/admin/members/${adoptedController.memberId}/adoption/list?` + $('#searchForm').serialize(),
                         method: 'get',
                         "dataSrc": function (res) {
                             return res.data;
@@ -66,8 +66,8 @@
                         {data: 'animalDivision1'},
                         {data: 'animalDivision2'},
                         {data: 'gender'},
-                        {data: 'adoptMemberName'},
-                        {data: 'adoptedAt'},
+                        {data: 'adoptedMemberName'},
+                        {data: 'adoptionCompletedAt'},
                     ],
                     language: {
                         search: '검색',
@@ -85,6 +85,7 @@
                 })
             }
         }
-        adoptedController.init();
+
+        adoptionController.init();
     })
 </script>
