--- a/module-admin/src/main/resources/templates/member/tab/adopted.html
+++ b/module-admin/src/main/resources/templates/member/tab/adopted.html
@@ -7,7 +7,7 @@
             <table id="adoptedTable" class="display" style="width:100%">
                 <thead>
                 <tr>
-                    <th>제목</th>
+                    <th>제목1</th>
                     <th>반려동물</th>
                     <th>품종</th>
                     <th>성별</th>
@@ -66,8 +66,8 @@
                         {data: 'animalDivision1'},
                         {data: 'animalDivision2'},
                         {data: 'gender'},
-                        {data: 'adoptMemberName'},
-                        {data: 'adoptedAt'},
+                        {data: 'adoptionMemberName'},
+                        {data: 'adoptedCompletedAt'},
                     ],
                     language: {
                         search: '검색',
