--- a/module-admin/src/main/resources/templates/member/tab/block.html
+++ b/module-admin/src/main/resources/templates/member/tab/block.html
@@ -1,10 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="card-header p-t-0 p-b-0">
+    <h3 class="sub-title"><strong>차단</strong></h3>
+</div>
+<div class="card-block-small p-t-0">
+    <div class="dt-responsive table-responsive">
+        <div id="order-table_wrapper" class="dataTables_wrapper dt-bootstrap4">
+            <table id="blockTable" class="display" style="width:100%">
+                <thead>
+                <tr>
+                    <th>차단유형</th>
+                    <th>차단상대 </th>
+                    <th>차단일시</th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-</body>
-</html>
+<script th:inline="javascript">
+    $(function () {
+        const blockController = {
+            memberId: /*[[${memberId}]]*/null,
+
+            init: function () {
+                let blockTable = null;
+
+                if (blockTable != null) blockTable.destroy();
+
+                blockTable = $('#blockTable').DataTable({
+                    "columnDefs": [
+                        {className: "dt-center", targets: "_all"}
+                    ],
+                    stripeClasses: [],
+                    pagingType: 'full_numbers',
+                    lengthChange: false,
+                    responsive: true,
+                    searching: false,
+                    info: false,
+                    destroy: true,
+                    ordering: false,
+                    paging: true,
+                    pageLength: 10,
+                    bPaginate: true,
+                    bAutoWidth: true, // 자동 컬럼 폭을 계산하여 반영
+                    serverSide: true,
+                    processing: true, // 값을 가져오는 등의 처리 상황에서 대기가 발생할 때, "processing"인디케이터를 보여준다.
+
+                    ajax: {
+                        async: false,
+                        url: `/admin/members/${blockController.memberId}/block/list?` + $('#searchForm').serialize(),
+                        method: 'get',
+                        "dataSrc": function (res) {
+                            return res.data;
+                        }
+                    },
+
+                    /*차단유형, 차단상태, 차단일시*/
+                    columns: [
+                        {data: 'category'},
+                        {
+                            render: function (data, type, row) {
+                                if(row.category.value === '차단함'){
+                                    return `${row.blockedMemberName}`
+                                }
+                                else return `${row.blockingMemberName}`;
+                            }
+                        },
+                        {data: 'blockedAt'},
+                    ],
+                    language: {
+                        search: '검색',
+                        emptyTable: '데이터가 없습니다.',
+                        loadingRecords: '로딩중..',
+                    },
+                    drawCallback: function () {
+                        var $api = this.api();
+                        var pages = $api.page.info().pages;
+
+                        if (pages === 0) {
+                            $(".paginate_button").hide();
+                        }
+                    }
+                })
+            }
+        }
+        blockController.init();
+    })
+</script>
