--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -327,3 +327,8 @@ div.dataTables_wrapper div.dataTables_info {
 
 .form-group.required .col-form-label::after{content:" *";color:red;}
 .sub-title.required strong::after{content:" *";color:red;font-weight:400;}
+
+.nice-select.form-select.form-control.custom-select.form-control-round.left-select {
+    border-top-left-radius: 50px !important;
+    border-bottom-left-radius: 50px !important;
+}
